src/test/deca/context/invalid/test_error_3.72.deca
// Description:
//    Soulève l'erreur (3.72)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Nombre de paramètres incorrect (règle 3.72)
//
// Historique:
//      cree le 06/01/2022

class A{
    void m(){
    }
}

{
	int b;
    A a;
    b = a.m(1);
}
